# csv-to-duckdb

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/lib/: connect.rs
src/components/: Connect.vue  Csv2db.vue  Layout.vue  PageTwo.vue
