[package]
name = "ducklling-plugin"
version = "0.1.0"
description = "ducklling-plugin"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib/mod.rs"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "api-all"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
csv = "1.3.0"
indexmap = {version = "2.2.6", features = ["serde"] }
chrono = "0.4.37"
duckdb = { version = "1.0.0", features = [
    "modern-full",
    # "bundled"
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
