[package]
name = "csv-to-duckdb"
version = "0.2.0"
description = "csv-to-duckdb"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib/mod.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3.0"
hashbrown = { version = "0.14", features = ["rayon", "ahash", "serde", "raw"] }
indexmap = {version = "2.6.0", features = ["serde"] }
chrono = "0.4.38"
duckdb = { version = "1.0.0", features = [
    "modern-full",
    "polars",
    # "bundled"
] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
